[package]
name = "web-component-rs"
version = "0.1.0"
edition = "2021"
author = "Jeremy Wall <jeremy@marzhillstudios.com>"

[lib]
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.wasm-bindgen-test]
version = "0.3"

[dependencies.wasm-bindgen]
version = "= 0.2.81"

[dependencies.js-sys]
version = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "CustomElementRegistry",
    "Document",
    #"DocumentFragment",
    "KeyboardEvent",
    "Event",
    "EventTarget",
    "Element",
    "Node",
    "Text",
    "HtmlBaseElement",
    "HtmlElement",
    "HtmlTemplateElement",
    "HtmlSlotElement",
    "Node",
    "ShadowRoot",
    "ShadowRootInit",
    "ShadowRootMode",
    "Window",
]