[package]
name = "wasm-web-component-macros"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-crate = "1.2.1"
str_inflector = "0.12.0"

[dependencies.syn]
version = "1.0.101"
features = ["full"]

[features]
HtmlTemplateElement = []
