[package]
name = "wasm-web-component"
version = "0.1.1"
edition = "2021"
author = "Jeremy Wall <jeremy@marzhillstudios.com>"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-web-component-macros = { path = "../macros" }

[dependencies.wasm-bindgen-test]
version = "0.3"

[dependencies.wasm-bindgen]
version = "~0.2"

[dependencies.js-sys]
version = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "CustomElementRegistry",
    "Document",
    #"DocumentFragment",
    "KeyboardEvent",
    "Event",
    "EventTarget",
    "Element",
    "Node",
    "Text",
    "HtmlBaseElement",
    "HtmlElement",
    "HtmlTemplateElement",
    "HtmlSlotElement",
    "Node",
    "ShadowRoot",
    "ShadowRootInit",
    "ShadowRootMode",
    "Window",
    "console"
]
