[package]
name = "wasm-web-component"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.wasm-web-component-macros]
path = "../macros"

[dependencies.wasm-bindgen-test]
version = "0.3"

[dependencies.wasm-bindgen]
version = "~0.2"

[dependencies.js-sys]
version = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "CustomElementRegistry",
    "Document",
    "KeyboardEvent",
    "Event",
    "EventTarget",
    "Element",
    "Node",
    "Text",
    "HtmlBaseElement",
    "HtmlElement",
    "HtmlSlotElement",
    "Node",
    "ShadowRoot",
    "ShadowRootInit",
    "ShadowRootMode",
    "Window",
    "console"
]

[features]
default = ["HtmlTemplateElement"]
HtmlTemplateElement = [
    "web-sys/HtmlTemplateElement",
    "wasm-web-component-macros/HtmlTemplateElement",
]
